# HedgeHog-AddTask

./: AddTask.dot  CMakeLists.txt  main.cpp
data/: InputData.h
task/: AddTask.h
